k8s/apps/hedgedoc/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hedgedoc
    app.kubernetes.io/name: hedgedoc
  name: hedgedoc
  namespace: hedgedoc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hedgedoc
      app.kubernetes.io/name: hedgedoc
  template:
    metadata:
      labels:
        app: hedgedoc
        app.kubernetes.io/name: hedgedoc
    spec:
      containers:
        - env:
            - name: CMD_LOGLEVEL
              value: debug
            - name: CMD_USECDN
              value: "false"
            - name: CMD_DB_URL
              valueFrom:
                secretKeyRef:
                  key: db-url
                  name: hedgedoc-b894f0
            - name: CMD_DOMAIN
              value: hedgedoc.walnuts.dev
            - name: CMD_OAUTH2_USER_PROFILE_URL
              value: https://auth.walnuts.dev/oidc/v1/userinfo
            - name: CMD_OAUTH2_USER_PROFILE_USERNAME_ATTR
              value: preferred_username
            - name: CMD_OAUTH2_USER_PROFILE_DISPLAY_NAME_ATTR
              value: name
            - name: CMD_OAUTH2_USER_PROFILE_EMAIL_ATTR
              value: email
            - name: CMD_OAUTH2_TOKEN_URL
              value: https://auth.walnuts.dev/oauth/v2/token
            - name: CMD_OAUTH2_AUTHORIZATION_URL
              value: https://auth.walnuts.dev/oauth/v2/authorize
            - name: CMD_OAUTH2_CLIENT_ID
              value: 242480725109048091@walnuts.dev
            - name: CMD_OAUTH2_CLIENT_SECRET
              valueFrom:
                secretKeyRef:
                  key: client-secret
                  name: hedgedoc-b894f0
            - name: CMD_OAUTH2_PROVIDERNAME
              value: walnuts.dev
            - name: CMD_OAUTH2_SCOPE
              value: openid profile email
            - name: CMD_PROTOCOL_USESSL
              value: "true"
            - name: CMD_EMAIL
              value: "false"
            - name: CMD_OAUTH2_ROLES_CLAIM
              value: my:zitadel:grants
            - name: CMD_OAUTH2_ACCESS_ROLE
              value: 237477822715658605:hedgedoc-user
            - name: CMD_IMAGE_UPLOAD_TYPE
              value: minio
            - name: CMD_MINIO_ACCESS_KEY
              valueFrom:
                secretKeyRef:
                  key: minio-access-key
                  name: hedgedoc-b894f0
            - name: CMD_MINIO_SECRET_KEY
              valueFrom:
                secretKeyRef:
                  key: minio-secret-key
                  name: hedgedoc-b894f0
            - name: CMD_MINIO_ENDPOINT
              value: minio.minio.svc.cluster.local
            - name: CMD_MINIO_PORT
              value: "9000"
            - name: CMD_MINIO_SECURE
              value: "false"
            - name: CMD_S3_BUCKET
              value: hedgedoc
            - name: CMD_DEFAULT_PERMISSION
              value: limited
            - name: CMD_SESSION_SECRET
              valueFrom:
                secretKeyRef:
                  key: session-secret
                  name: hedgedoc-b894f0
          image: quay.io/hedgedoc/hedgedoc:1.10.5
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /_health
              port: 3000
            initialDelaySeconds: 3
            periodSeconds: 3
          name: hedgedoc
          ports:
            - containerPort: 3000
          resources:
            limits: {}
            requests:
              memory: 80Mi
          startupProbe:
            failureThreshold: 30
            httpGet:
              path: /_health
              port: 3000
            periodSeconds: 10
