k8s/apps/hedgedoc/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hedgedoc
    app.kubernetes.io/name: hedgedoc
  name: hedgedoc
  namespace: hedgedoc
spec:
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  selector:
    app: hedgedoc
    app.kubernetes.io/name: hedgedoc
  type: ClusterIP
