k8s/apps/hedgedoc/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    annotations:
        nginx.ingress.kubernetes.io/proxy-body-size: 100M
    labels:
        app: hedgedoc
        app.kubernetes.io/name: hedgedoc
    name: hedgedoc
    namespace: hedgedoc
spec:
    ingressClassName: cilium
    rules:
        - host: hedgedoc.walnuts.dev
          http:
            paths:
                - backend:
                    service:
                        name: hedgedoc
                        port:
                            number: 3000
                  path: /
                  pathType: Prefix

---
